# skull-c

./: .gitignore  Makefile  README.md  configure
lib/: CMakeLists.txt
lib/include/skull/: skull.h
lib/include/skull/helpers/: helpers.h
lib/src/: skull.c
lib/src/helpers/: helpers.c
src/: CMakeLists.txt
src/dns_lookup/: CMakeLists.txt  README.md  main.c
src/hello_world/: CMakeLists.txt  README.md  main.c
src/http_client/: CMakeLists.txt  main.c
src/icmp_client/: CMakeLists.txt  README.md  main.c
src/interfaces/: CMakeLists.txt  main.c
src/thread/: CMakeLists.txt  README.md  main.c
